[tool.black]
line-length = 120

[tool.poetry]
name = "lungo-cli"
version = "0.3.0"
description = "A user-friendly home lab setup designed for small-to-mid-scale on-premises hosting."
authors = ["raymond-u <36328498+raymond-u@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/raymond-u/lungo"
documentation = "https://raymond-u.github.io/lungo/"
keywords = ["homelab", "self-host"]
packages = [{ include = "lungo_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
aenum = "^3.1.15"
cryptography = "^42.0.5"
jinja2 = "^3.1.3"
packaging = "^24.0"
platformdirs = "^4.2.0"
pydantic = { extras = ["email"], version = "^2.6.4" }
pydantic-yaml = "^1.3.0"
requests = "^2.31.0"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "^2.0.0"
mkdocs-glightbox = "^0.3.7"
mkdocs-material = "^9.5.17"
mkdocs-typer = "^0.0.3"

[tool.poetry.scripts]
lungo = "lungo_cli.app.main:app_wrapper"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
