[tool.black]
line-length = 120

[tool.poetry]
name = "lungo-cli"
version = "0.5.12"
description = "A user-friendly home lab setup designed for small-to-mid-scale on-premises hosting."
authors = ["raymond-u <36328498+raymond-u@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/raymond-u/lungo"
documentation = "https://raymond-u.github.io/lungo/"
keywords = ["homelab", "self-host"]
packages = [{ include = "lungo_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
aenum = "^3.1.15"
cryptography = "^43.0.3"
jinja2 = "^3.1.4"
packaging = "^24.2"
platformdirs = "^4.3.6"
pydantic = { extras = ["email"], version = "^2.9.2" }
pydantic-yaml = "^1.3.0"
requests = "^2.32.3"
typer = "^0.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "^2.1.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-material = "^9.5.44"
mkdocs-typer = "^0.0.3"

[tool.poetry.scripts]
lungo = "lungo_cli.app.main:app_wrapper"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
